Делаем верхнюю полоску общей

--- a/diffserver/templates/base.html
+++ b/diffserver/templates/base.html
@@ -17,6 +17,7 @@
             position: fixed; top: 0px; left: 0px;
             height: 20px; width: 100%;
             background-color: black; color: white;
+            padding-left: 2em;
         }
         #subtop_fixed_bar {
             position: fixed; top: 20px; left: 0px;
@@ -28,7 +29,21 @@
             height: 20px; width: 100%;
             background-color: #008800; color: white;
         }
+        .top_bar_title {
+            color: yellow;
+            margin-left: 4em;
+            margin-right: 4em;
+        }
+        #top_fixed_bar a {
+            color: #aaaaaa;
+        }
     </style>
+
+<div id="top_fixed_bar">
+    <a href="/">Diffcommenter</a>
+    |
+    <span class="top_bar_title">{% block top_bar_title %}Главная{% endblock %}</span>
+</div>
 
 {% block entire_body %}
 {% endblock %}
