--- a/diffserver/templates/base.html
+++ b/diffserver/templates/base.html
@@ -3,41 +3,13 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>{% block page_title %}Diffcommenter{% endblock %}</title>
+    <link href="{{ STATIC_URL }}css/common.css" rel="stylesheet" media="screen">
+    {% block head_extra %}
+    {% endblock %}
 </head>
 <body>
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}js/jquery.ba-viewportoffset.min.js"></script>
-    <style>
-        body {
-            padding-top: 60px;
-            font-family: Consolas, Ubuntu Mono, monospace;
-        }
-
-        #top_fixed_bar {
-            position: fixed; top: 0px; left: 0px;
-            height: 20px; width: 100%;
-            background-color: black; color: white;
-            padding-left: 2em;
-        }
-        #subtop_fixed_bar {
-            position: fixed; top: 20px; left: 0px;
-            height: 20px; width: 100%;
-            background-color: #000088; color: white;
-        }
-        #subsubtop_fixed_bar {
-            position: fixed; top: 40px; left: 0px;
-            height: 20px; width: 100%;
-            background-color: #008800; color: white;
-        }
-        .top_bar_title {
-            color: yellow;
-            margin-left: 4em;
-            margin-right: 4em;
-        }
-        #top_fixed_bar a {
-            color: #aaaaaa;
-        }
-    </style>
+<script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+<script src="{{ STATIC_URL }}js/jquery.ba-viewportoffset.min.js"></script>
 
 <div id="top_fixed_bar">
     <a href="/">Diffcommenter</a>
