Прячем полоску подстветки под верхние бары

--- a/diffserver/assets/css/diffpage.css
+++ b/diffserver/assets/css/diffpage.css
@@ -82,6 +82,7 @@ a.fixed_link:hover {
 }
 
 #horizontal_highlighter {
+    z-index: 50;
     position: absolute;
     height: 20px;
     width: 100%;
