--- a/diffserver/assets/css/common.css
+++ b/diffserver/assets/css/common.css
@@ -4,17 +4,20 @@ body {
 }
 
 #top_fixed_bar {
+    z-index: 100;
     position: fixed; top: 0px; left: 0px;
     height: 20px; width: 100%;
     background-color: black; color: white;
     padding-left: 2em;
 }
 #subtop_fixed_bar {
+    z-index: 100;
     position: fixed; top: 20px; left: 0px;
     height: 20px; width: 100%;
     background-color: #000088; color: white;
 }
 #subsubtop_fixed_bar {
+    z-index: 100;
     position: fixed; top: 40px; left: 0px;
     height: 20px; width: 100%;
     background-color: #008800; color: white;
