--- a/diffserver/templates/comment_ajax.html
+++ b/diffserver/templates/comment_ajax.html
@@ -1,4 +1,4 @@
-<div class="comment" data-pk="{{ comment.pk }}" data-from="{{ comment.first_line_anchor }}" data-to="{{ comment.last_line_anchor }}">
+<div class="comment {% if comment.user == user %}my-own-comment{% endif %}" data-pk="{{ comment.pk }}" data-from="{{ comment.first_line_anchor }}" data-to="{{ comment.last_line_anchor }}">
     <div class="comment-title">
         <span class="comment-date">{{ comment.added }}</span>
         <span class="user-name">{{ comment.user }}</span>
