--- a/diffserver/templates/base.html
+++ b/diffserver/templates/base.html
@@ -12,7 +12,7 @@
 <script src="{{ STATIC_URL }}js/jquery.ba-viewportoffset.min.js"></script>
 
 <div id="top_fixed_bar">
-    <a href="/">Diffcommenter</a>
+    <a class="bland_link" href="/">Diffcommenter</a>
     |
     <span class="top_bar_title">{% block top_bar_title %}Главная{% endblock %}</span>
     <div class="top_bar_user_info">
