--- a/diffserver/assets/css/diffpage.css
+++ b/diffserver/assets/css/diffpage.css
@@ -2,12 +2,10 @@
     border-collapse: collapse;
     border: solid 1px gray;
     font-family: Consolas, Ubuntu Mono, monospace;
-    font-size: 13px;
 }
 
 .difftable pre {
     font-family: Consolas, Ubuntu Mono, monospace;
-    font-size: 13px;
     margin-bottom:0;
     margin-top:0;
 }
@@ -43,6 +41,14 @@
     margin-left: 1em;
     background-color: #ffffff;
 }
+.comment-date a {
+    color: inherit;
+    text-decoration: none;
+}
+.comment-date a:hover {
+    text-decoration: underline;
+}
+
 .comment-body textarea {
     width: 90%;
     min-height: 2em;
@@ -146,7 +152,7 @@ td.lno {
     height: 20px;
     width: 100%;
     display: none;
-    background-color: yellow;
+    background-color: #ff8800;
     pointer-events: none;
     left: 0px;
     opacity: 0.5;
@@ -162,4 +168,16 @@ td.lno {
     background: #ffeeaa;
     border: 1px solid #ffcc00;
     opacity: 0.5;
+}
+
+.toc_comment_user {
+    display: inline-block;
+    min-width: 10em;
+    text-decoration: italic;
+}
+.toc_comment_my_own {
+    font-weight: bold;
+}
+.toc_comment_link {
+    color: #888888;
 }
