--- a/diffserver/assets/css/common.css
+++ b/diffserver/assets/css/common.css
@@ -23,11 +23,15 @@ body {
     font-size: 120%;
 }
 #subsubtop_fixed_bar {
-    z-index: 100;
+    z-index: 99;
     position: fixed; top: 40px; left: 0px;
     height: 20px; width: 100%;
     background-color: #008800; color: white;
     font-size: 120%;
+
+    -webkit-box-shadow: 0px 8px 16px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 8px 16px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 8px 16px rgba(50, 50, 50, 0.75);
 }
 .top_bar_title {
     color: yellow;
