--- a/diffserver/assets/css/diffpage.css
+++ b/diffserver/assets/css/diffpage.css
@@ -32,6 +32,10 @@
     margin-left: 30px;
     border: solid 1px #888800;
     background-color: #ffffbb;
+
+    -webkit-box-shadow: 0px 2px 4px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 2px 4px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 2px 4px rgba(50, 50, 50, 0.75);
 }
 .comment-title {
     border-bottom: gray;
@@ -53,7 +57,7 @@
     width: 90%;
     min-height: 2em;
     background: transparent;
-    border: solid 1px black;
+    border: dotted 1px #888888;
 }
 
 .ajax_comment_container {
