--- a/diffserver/templates/base.html
+++ b/diffserver/templates/base.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>{% block page_title %}Diffcommenter{% endblock %}</title>
 </head>
 <body>
+    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+    <style>
+        body {
+            padding-top: 60px;
+        }
+    </style>
+
 {% block entire_body %}
 {% endblock %}
 </body>
