Возможность смены пароля

--- a/diffserver/templates/base.html
+++ b/diffserver/templates/base.html
@@ -17,7 +17,7 @@
     <span class="top_bar_title">{% block top_bar_title %}Main{% endblock %}</span>
     <div class="top_bar_user_info">
         {% if user.is_authenticated %}
-        ☑ <i>{{ user }}</i> (<a href="{% url logout %}">logout</a>)
+        ☑ <i>{{ user }}</i> (<a href="{% url chpasswd %}" title="Change your password">chpasswd</a>|<a href="{% url logout %}">logout</a>)
         {% else %}
         ☒ <a href="{% url login %}?next={{ request.get_full_path }}">login</a>
         {% endif %}
