--- a/diffserver/templates/base.html
+++ b/diffserver/templates/base.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>{% block page_title %}Diffcommenter{% endblock %}</title>
     <link href="{{ STATIC_URL }}css/common.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}/favicon.ico">
     {% block head_extra %}
     {% endblock %}
 </head>
